- Fixes to bigdemo MDI sample to work on MS Windows (Roy Sutton)
- Fixes to get_text_extent in DC, WindowDC, Window (Roy Sutton)
- Fix to bigdemo Notebook sample (Roy Sutton)
- Fixes to evt_menu_range (Roy Sutton)
- Fix to bigdemo wxScrolledWindow to avoid crashing on Linux
- Omit FontDialog.new(window) from Mac to avoid compile error
- Many fixes to grid-related classes (Sean Long)



====0.0.29 tag included all of this:===
- Updated rakefile to only try to build .i swig files (thanks to Roy Sutton)
- Change App debugging output to be based on __WXDEBUG__ (Sean Long)
- Several corrections to the inheritance chains (Sean Long)
- Added TopLevelWindow (Sean Long)
- Made more RadioBox methods virtual (thanks to Roy Sutton)
- Split RadioBox#show_item, to match wxPython
- Added ScreenDC (Sean Long)
- Added ChoiceBook and ChoiceBookEvent (Sean Long)
- Fixed controls.rb sample so images load properly (Roy Sutton)
- Fix big bug where Mac apps would exit before showing the main window,
  by declaring Show in Frame.i (Sean Long)
- Added, fixed, and rearranged lots of RubyConstants (Sean Long)
- Fixed grid renderers and editors to use SWIG directors (Sean Long)
- Added typemap for ArrayInt (Sean Long)
- Fixed bigdemo About box (Roy Sutton)
- Added wxTreeCtrl::HitTest which allows tree clicks in bigdemo (Roy Sutton)
- Fixed declaration of StaticLine constructor and #create (Roy Sutton)
- Fix to bigdemo that allows wxDialog to come up (Roy Sutton)
- Fix to bigdemo that allows double-clicking in the tree (Roy Sutton)
- Added/corrected several methods in Event and subclasses (Roy Sutton)
- Fix renamer so centreX becomes centre_x (Roy Sutton)
- Added several typemaps so more of bigdemo can work (Roy Sutton)
- Made Caret#show and #hide virtual to avoid crashing the caret sample
- Fixed wxCheckListBox.h which works around a swig overloading problem
  (supposedly helps with part of bigdemo) (thanks to Roy Sutton)
- Two tweaks to bigdemo that allow CheckListBox sample to work on Linux