@@ -1,0 +1,12 @@
+#   Copyright 2004-2005 by Kevin Smith
+#   released under the MIT-style wxruby2 license
+
+%include "../common.i"
+
+%module(directors="1") wxTextValidator
+
+%import "include/wxObject.h"
+%import "include/wxEvtHandler.h"
+%import "include/wxValidator.h"
+
+%include "include/wxTextValidator.h"
